name: TestProg
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: BSD3


executable todo
    build-depends: base
                , react-flux
                , deepseq
                , text
    default-language: Haskell2010
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -threaded -with-rtsopts=-N3
    cpp-options: -DGHCJS_BROWSER
    
